[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "helpr"
version = "1.0"
authors = [
    {name = "Benjamin B. Schroeder"}, 
    {name = "Cianan Sims"}, 
    {name = "Benjamin R. Liu"}, 
    {name = "Bailey Lucero"}
]
description = "Hydrogen Extreme Low Probability of Rupture Python Package"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["hydrogen", "risk"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License"
]
dependencies = ["matplotlib", "numpy", "scipy", "pandas"]

[project.urls]
# Need eventual URLs
#homepage = "https://hyram.sandia.gov/"
#repository = "https://github.com/sandialabs/hyram"

[tool.setuptools.packages.find]
where = ["src"]
