[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "helpr"
version = "2.1.0"
authors = [
    {name = "Michael Devin"},
    {name = "Bailey Lucero"},
    {name = "Benjamin R. Liu"},
    {name = "Charlene Palacio"},
    {name = "Benjamin B. Schroeder"},
    {name = "Cianan Sims"},
]
maintainers = [
    {name = "Michael Devin"},
    {name = "Charlene Palacio"},
    {name = "Benjamin B. Schroeder"},
    {name = "Cianan Sims"}
]

description = "Hydrogen Extreme Low Probability of Rupture Python Package"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["fatigue", "fracture", "probabilistic", "hydrogen", "pipeline", "pressure", "vessel"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = ["matplotlib", "numpy", "scipy", "pandas", "xarray", "netcdf4"]

[project.urls]
homepage = "https://helpr.sandia.gov/"
repository = "https://github.com/sandialabs/helpr"

[tool.setuptools.packages.find]
where = ["src"]
